(feat): removed dependency on firebase Architecture now changed to REST (stateLess)
